<resources>
    <string name="app_name">Khushi\nLottery</string>

    <!--  activity_login  -->
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>

    <!--  LoginActivity  -->
    <string name="required">Required</string>
    <string name="required_email">Email is required</string>
    <string name="required_password">password is required</string>
    <string name="login_successful">Loggin Successful</string>
    <string name="cannot_login">Login Unsuccessful</string>

    <string name="loading">Loading........</string>
    <string name="no_internet">No internet connection !!!</string>
    <string name="invalid_email">Invalid Email</string>

    <!--  dialog_qr_lottery_detail -->
    <string name="category_title">Category Title</string>
    <string name="save">Save</string>

    <!-- dialog_select_lottery_number  -->
    <string name="lottery_number">Lottery Number : </string>
    <string name="select_number">Select the numbers : </string>

    <!--  home fragment  -->
    <string name="rs">RS</string>
    <string name="want_to_buy">Want to buy more ticket ?</string>
    <string name="print_ticket">Print this ticket ?</string>

    <!--  lottry_item-->
    <string name="quick_pick">Quick Pick</string>
    <string name="cancel">Cancel</string>

    <!--  HomeFragment -->
    <string name="no_lottery_available">No lottery available to print</string>
    <!--   main_menu -->
    <string name="language">Language</string>
    <string name="logout">Logout</string>

    <!-- activity_setting -->
    <string name="setting">Setting</string>
    <string name="user_detail">User Information</string>
    <string name="profile">Profile</string>
    <string name="select_language">Select Language</string>
    <string name="remove_account">Remove Account</string>

    <!--logout dialog strings-->
    <string name="logout_dialog_message">Are you sure, you want to log out from this account?</string>
    <string name="no">No</string>
    <string name="yes">YES</string>

    <!--  activity_settinglanguage -->
    <string name="english_language">English</string>
    <string name="nepali_language">Nepali</string>

    <!--  dialog_profile-->
    <string name="user_name">Name : </string>
    <string name="user_email">Email : </string>

    <!--  bottom_sheet_splash_language  -->
    <string name="choose_language">Hey, choose your language for application</string>


</resources>
