<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <RelativeLayout
        android:id="@+id/appBarRL"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/toolbarBack"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="4dp"
            android:src="@drawable/ic_back"
            android:tint="@android:color/black" />


        <TextView
            android:id="@+id/settingTitleTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:gravity="center"

            android:text="@string/setting"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />


    </RelativeLayout>

    <View
        android:layout_marginTop="2dp"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/black"></View>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16sp"
        android:layout_marginTop="16sp"
        android:layout_marginRight="16sp"
        android:padding="5dp"
        android:text="@string/user_detail"
        android:textColor="@color/black"
        android:textSize="16sp" />


    <LinearLayout
        android:id="@+id/setting_profile"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_user" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:text="@string/profile"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_margin="16dp"
        android:background="@color/black"></View>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16sp"
        android:layout_marginTop="16sp"
        android:layout_marginRight="16sp"
        android:padding="5dp"
        android:text="@string/language"
        android:textColor="@color/black"
        android:textSize="16sp" />


    <LinearLayout
        android:id="@+id/setting_select_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal"
        android:padding="5dp"
        android:weightSum="1">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="0.1"
            android:src="@drawable/ic_language" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_weight="0.9"
            android:text="@string/select_language"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/setting_language_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_marginRight="5dp"
            android:layout_weight="0"
            android:gravity="right|center"
            android:text="English"
            android:textColor="@color/black"
            android:textSize="14sp" />

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_margin="14dp"
        android:background="@color/black"></View>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16sp"
        android:layout_marginTop="16sp"
        android:layout_marginRight="16sp"
        android:padding="5dp"
        android:text="@string/remove_account"
        android:textColor="@color/black"
        android:textSize="16sp" />


    <TextView
        android:id="@+id/btn_logout_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16sp"
        android:layout_marginTop="16sp"
        android:layout_marginRight="16sp"
        android:padding="5dp"
        android:text="@string/logout"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_margin="14dp"
        android:background="@color/black"></View>


</LinearLayout>
